packages/app/web/css/ui.css
* {
    box-sizing: border-box;
}
::selection {
    background: var(--color-selection-background);
}
html, body, .page, .main, .repl, sidecar {
    height: 100%;
    max-height: 100%;
    overflow-x: hidden;
}
body {
    margin: 0;
    overflow: hidden;
}
.page {
    display: flex;
    flex-direction: column;
}
body a.plain-anchor {
    color: inherit;
    text-decoration: none;
    transition: none;
}
body a {
    transition: color 150ms ease-in-out;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
body a:hover:not(.plain-anchor) {
    cursor: pointer;
}

/* HEADER */
body .page > .header {
    /* only allow mouse dragging on top-most header */
    -webkit-app-region: drag;
}
.header {
    flex-basis: 0;
    display: flex;
    align-items: center;
    padding: 0 1.1875em;
    font-weight: 300;
    font-size: 1rem;
    -webkit-font-smoothing: antialiased;  /* chrome */
    -moz-osx-font-smoothing: grayscale;   /* firefox */
    font-smoothing: antialiased;
}
.header .deemphasize {
    font-size: 55%;
    letter-spacing: 1px;
    display: none;
}
.header-left-bits, .header-right-bits {
    display: flex;
    align-items: center;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.header-left-bits {
    flex: 1;
}
.header-top-bits {
    display: flex;
    flex: 1;
}
.header .clickable, .header .clickable:hover {
    text-decoration: none;
    transition: none;
}
.header .clickable {
    /* this just gives a little room for hovers, so that users don't have
   to mouse precisely over the hover text */
    padding: 0.75ex 0;
}
.application-icon {
    transition: transform .8s ease-in-out, opacity 0s linear;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: contain;
}
.application-icon {
    animation: spin 500ms linear 1;
}
body.still-loading .application-icon {
    animation: spin 2.5s alternate infinite;
}
.application-icon:hover {
    opacity: 1;
    transform: rotate(450deg);
    filter: hue-rotate(-20deg) brightness(0.925);
    cursor: pointer;
}
body:not(.not-electron) .application-icon {
    display: none;
}
.application-icon {
    width: 3.75em;
    height: 3.75em;
    margin: 0 auto;
    margin-bottom: 1em;
    -webkit-app-region: no-drag;
    transition: all 650ms ease-in-out;
    opacity: 0.75;
}
.header .application-name {
    font-size: 1.125rem;
    font-weight: 400;
}
.header .application-name .bx--logo__text--bold {
    font-weight: 600;
}
.header .application-name .bx--global-header__title--current-page {
    font-weight: 400;
}
header .header-nav-list {
    display: flex;
    align-items: center;
    list-style: none;
    margin: 0;
    padding: 0;
}
.header .header-nav-list li {
    font-weight: 400;
    font-size: 0.75rem;
    text-transform: uppercase;
    margin: 0 1em;
    -webkit-app-region: no-drag;
}
.header-nav-list li input {
    border: none;
    font-family: inherit;
    font-size: inherit;
    text-transform: inherit;
    font-weight: inherit;
    padding: 0;
}

/* MAIN */
.main {
    display: flex;
    flex: 1;
}

/* REPL */
body.still-loading .repl {
    opacity: 0;
}
.repl {
    opacity: 1;
    display: flex;
    flex-direction: column;
    margin: 0;
    padding-top: 1rem;
    flex: 4;
    transition: flex 300ms ease-in-out, opacity 300ms ease-in-out, background-color 300ms ease-in-out;
    background-color: var(--color-ui-01);
}
.repl-inner {
    overflow-y: auto;
    flex:1;
}
.repl.sidecar-visible .repl-block {
    background: transparent;
}
.repl-block {
    padding: 0.75em 0 0;
    display: flex;
    flex-direction: column;
}
.repl-block.repl-active {
    /* for the bottom-most block, add a bit of bottom padding, to avoid smashing into the bottom of the viewport */
    padding-bottom: 0.5em;
}
body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl .repl-block {
    border-color: transparent;
    box-shadow: none;
}
.repl, .repl input {
    font-family: var(--font-monospace);
}
.repl-result {
    font-size: 0.875em;
}
.result-as-table .result-table, .result-as-table.result-table {
    display: table;
    border-spacing: 0;
    border-collapse: collapse;
    border: 1px solid var(--color-ui-04);
    margin-top: 0.75em;
    /* this causes odd flickering on chrome: transition: border-color 300ms ease-in-out; */
    background: transparent;
}
.result-as-fixed-tables .result-table, .result-as-fixed-tables.result-table {
    table-layout: fixed;
    width: 100%;
}
.result-as-multi-table .result-table-outer-wrapper {
    /* repl multi-table */
    display: table-row;
}
.scrollable[data-table-max-rows="4"], .scrollable-auto[data-table-max-rows="4"] {
    max-height: calc(4 * 3em + 2px);
}
.scrollable[data-table-max-rows="5"], .scrollable-auto[data-table-max-rows="5"] {
    max-height: calc(5 * 3em + 2px);
}
.scrollable[data-table-max-rows="6"], .scrollable-auto[data-table-max-rows="6"] {
    max-height: calc(6 * 3em + 2px);
}
.scrollable[data-table-max-rows="7"], .scrollable-auto[data-table-max-rows="7"] {
    max-height: calc(7 * 3em + 2px);
}
.scrollable[data-table-max-rows="8"], .scrollable-auto[data-table-max-rows="8"] {
    max-height: calc(8 * 3em + 2px);
}
.scrollable[data-table-max-rows="9"], .scrollable-auto[data-table-max-rows="9"] {
    max-height: calc(9 * 3em + 2px);
}
.scrollable[data-table-max-rows="10"], .scrollable-auto[data-table-max-rows="10"] {
    max-height: calc(10 * 3em + 2px);
}
.result-as-multi-table .result-table-outer {
    /* repl multi-table */
    display: table-cell;
}
.result-as-fixed-tables.result-as-table .result-table-outer {
    /* if these are fixed tables, then they will occupy the full width of
       the container, so we don't need a margin-right */
    margin-right: 0;
}
.result-as-table .result-table-outer .result-table {
    margin-top: 0;
}  
/* ... */

