fix(packages/app): improve consistency of "ok" spacing
Fixes #815

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -167,7 +167,7 @@ body.still-loading .repl {
     background: transparent;
 }
 .repl-block {
-    padding: 0.75em 0 0;
+    padding: 1em 0 0;
     display: flex;
     flex-direction: column;
 }
@@ -379,9 +379,6 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 .repl input:focus {
     outline: none;
 }
-.repl-block.valid-response .ok-for-list {
-    margin-top: 0.75em;
-}
 .repl-block.valid-response .ok, .green-text, .dragover .ok-text-on-dragover {
     opacity: 1 !important;
 }
@@ -394,7 +391,6 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
 }
 .repl-block.valid-response .ok, .repl-block.valid-response > .oops {
     display: block;
-    padding: 0.5em 0;
     font-size: 0.875em;
 }
 .repl-block.valid-response .repl-result .ok {
